List all Vets on Vet Index Page Closes #13

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,7 @@
     <title>Owner Index Page</title>
 </head>
 <body>
-<!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.Owner"*/-->
+<!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.Modelv.Owner"*/-->
 
 <h1 th:text="'List of owners'">List of Owners</h1>
 <table class="table table-striped">
