--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,6 +6,23 @@
 </head>
 <body>
 <h1 th:text="'List of Vets'">List of Vets</h1>
+<!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.Model.Vet"*/-->
 
+<table id="vets" class="table table-striped">
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Joe</td>
+        <td th:text="${vet.lastName}">Buck</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
