--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Owner Index Page</title>
@@ -7,7 +7,7 @@
 <body>
 <!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.Modelv.Owner"*/-->
 
-<h1 th:text="'List of owners'">List of Owners</h1>
+<h2 th:text="'List of owners'">List of Owners</h2>
 <table class="table table-striped">
     <thead>
     <tr>
