--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -14,6 +14,7 @@
         <th style="width: 150px;">Id</th>
         <th style="width: 150px;">First Name</th>
         <th style="width: 150px;">Last Name</th>
+        <th style="width: 150px;">View/th>
     </tr>
     </thead>
     <tbody>
@@ -21,6 +22,9 @@
         <td th:text="${owner.id}">1</td>
         <td th:text="${owner.firstName}">Joe</td>
         <td th:text="${owner.lastName}">Buck</td>
+        <td>
+        <a class="btn btn-default" href="#" th:href="@{'/owners/' + ${owner.id} }" role="button">View</a>
+    </td>
     </tr>
     </tbody>
 </table>
